--- a/nx-kronos/package.json
+++ b/nx-kronos/package.json
@@ -13,6 +13,7 @@
     "express": "~4.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.13.1",
     "tailwind-variants": "^0.3.0"
   },
