--- a/nx-kronos/libs/demopage/util/project.json
+++ b/nx-kronos/libs/demopage/util/project.json
@@ -1,9 +1,9 @@
 {
-  "name": "extract-gh-response-header-link-pagination",
+  "name": "util",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/demopage/util/src",
   "projectType": "library",
   "tags": [],
-  "// targets": "to see all targets run: nx show project extract-gh-response-header-link-pagination --web",
+  "// targets": "to see all targets run: nx show project util --web",
   "targets": {}
 }
