--- a/nx-kronos/package.json
+++ b/nx-kronos/package.json
@@ -11,10 +11,12 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "express": "~4.18.1",
+    "ky": "^1.7.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.13.1",
+    "react-router": "^7.0.2",
     "tailwind-variants": "^0.3.0"
   },
   "devDependencies": {
