--- a/nx-kronos/tsconfig.base.json
+++ b/nx-kronos/tsconfig.base.json
@@ -15,11 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@kronos/extract-gh-response-header-link-pagination": [
-        "libs/demopage/util/src/index.ts"
-      ],
+      "@kronos/util": ["libs/demopage/util/src/index.ts"],
       "@kronos/features": ["libs/demopage/features/src/index.ts"],
-      "@kronos/kbutton": ["libs/demopage/ui/kbutton/src/index.ts"],
       "@kronos/types": ["types/src/index.ts"],
       "@kronos/ui": ["libs/demopage/ui/src/index.ts"]
     }
